force-app/main/default/objects/Pin_Code__c/Pin_Code__c.object-meta.xml
<CustomObject>
    <label>Pin Code</label>
    <nameField>
        <label>Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pin Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>