force-app/main/default/objects/Pin_Code__c/fields/Area_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Area_Pincode__c</fullName>
    <externalId>true</externalId>
    <label>Area Pincode</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>