force-app/main/default/objects/Pin_Code__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Pin Codes</relationshipLabel>
    <relationshipName>Pin_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>