force-app/main/default/objects/Pin_Code__c/fields/City_Zone__c.field-meta.xml
<CustomField>
    <fullName>City_Zone__c</fullName>
    <label>City Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>