force-app/main/default/objects/Pin_Code__c/fields/Dealer_Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer/Service Center</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Dealer/COCO Store/Service Center Account.</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Dealer, COCO Store, Service Center</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pin Codes</relationshipLabel>
    <relationshipName>Pin_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>