force-app/main/default/objects/Pin_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dealer_Service_Center__c</columns>
    <columns>Area_Pincode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>